package protocolBuffer;

option java_package = "protocolBuffer";
option java_outer_classname = "TableProtos";

message Table {
  required string tableName = 1;
  required int32 columnsNumber = 2;
  required int32 rowsNumber = 3;

  repeated int32 columnTypes = 4;
  repeated string columnNames = 5;
 
  message Row {
	repeated string columnValue = 1;	
  }

  repeated Row rows = 6;
}

